[gd_scene load_steps=17 format=3 uid="uid://brlqcjircjtno"]

[ext_resource type="Script" uid="uid://oisxcn4h6tg2" path="res://scripts/enemy/enemy.gd" id="1_qohmm"]
[ext_resource type="Script" uid="uid://tu88ql113j2x" path="res://scripts/enemy/states/masters/boss_behavior.gd" id="2_gxsmt"]
[ext_resource type="Script" uid="uid://dh1uvc6o7eeo3" path="res://scripts/enemy/states/masters/boss_phases/phase_test_1.gd" id="3_3hx1n"]
[ext_resource type="PackedScene" uid="uid://goav50e4qvt0" path="res://scene/enemy/enemy_bullet.tscn" id="4_1awqw"]
[ext_resource type="Script" uid="uid://dcobhyh2ydvef" path="res://addons/finite_state_machine/scripts/finite_state_machine.gd" id="4_iyfoj"]
[ext_resource type="Script" uid="uid://bwn88up72of2y" path="res://scripts/enemy/states/masters/boss_phases/phase_2.gd" id="5_b7cw5"]
[ext_resource type="Script" uid="uid://dj3y7t3gdn6bj" path="res://addons/finite_state_machine/scripts/state_machine_state.gd" id="5_h10c2"]
[ext_resource type="Script" uid="uid://dug1msh1cc714" path="res://scripts/enemy/states/idle_state.gd" id="6_cf5re"]
[ext_resource type="Script" uid="uid://t3yepo8pmdk" path="res://scripts/enemy/states/chase_state.gd" id="7_owoi1"]
[ext_resource type="Script" uid="uid://4p7iwa71qh84" path="res://scripts/enemy/states/avoid_state.gd" id="8_i46cv"]
[ext_resource type="PackedScene" uid="uid://derh5gmq2d8f8" path="res://scene/utilities/gore/gore_manager.tscn" id="9_atak7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gjrny"]
radius = 1.0
height = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3t5hi"]
albedo_color = Color(1, 0.0352941, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_67f57"]
material = SubResource("StandardMaterial3D_3t5hi")
radius = 1.0
height = 4.0

[sub_resource type="BoxMesh" id="BoxMesh_f57f6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_un28l"]
bg_color = Color(0.572549, 0, 0, 1)

[node name="enemy_boss" type="CharacterBody3D" node_paths=PackedStringArray("navigation_agent", "gore_manager") groups=["Enemy"]]
script = ExtResource("1_qohmm")
hp = 500
navigation_agent = NodePath("behavior_master/NavigationAgent3D")
gore_manager = NodePath("gore_manager")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_gjrny")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_67f57")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.764849, 0, 0, 0, 0.241913, 0, 0, 0, 0.29789, 0, 0.991486, -1.01338)
mesh = SubResource("BoxMesh_f57f6")
skeleton = NodePath("../..")

[node name="Looker" type="Node3D" parent="."]

[node name="aim_ray" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -100)
collision_mask = 3
debug_shape_custom_color = Color(1, 0.427451, 0.635294, 1)
debug_shape_thickness = 5

[node name="behavior_master" type="Node3D" parent="." node_paths=PackedStringArray("phases", "health_bar", "master", "state_machine", "aim_node", "attack_timer", "look_ray", "dead_state", "idle_state", "chase_state", "avoid_state")]
script = ExtResource("2_gxsmt")
phases = [NodePath("phase_2"), NodePath("phase_3"), NodePath("phase_1")]
health_bar = NodePath("../HUD/ProgressBar")
master = NodePath("..")
state_machine = NodePath("FiniteStateMachine")
aim_node = NodePath("aimnode")
attack_timer = NodePath("attack_timer")
look_ray = NodePath("../aim_ray")
dead_state = NodePath("FiniteStateMachine/Dead")
idle_state = NodePath("FiniteStateMachine/Idle")
chase_state = NodePath("FiniteStateMachine/Chase")
avoid_state = NodePath("FiniteStateMachine/Avoid")

[node name="phase_1" type="Node3D" parent="behavior_master" node_paths=PackedStringArray("muzzles", "shoot_cooldown")]
script = ExtResource("3_3hx1n")
muzzles = [NodePath("Muzzle")]
bullet = ExtResource("4_1awqw")
fire_rate = 0.1
shoot_cooldown = NodePath("shoot_cooldown")
spread = 0.0
max_ammo = 50
reload_duration = 5.0
hp_to_activate = 500

[node name="shoot_cooldown" type="Timer" parent="behavior_master/phase_1"]
wait_time = 0.05

[node name="Muzzle" type="Node3D" parent="behavior_master/phase_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2)

[node name="phase_2" type="Node3D" parent="behavior_master" node_paths=PackedStringArray("muzzles", "shoot_cooldown")]
script = ExtResource("5_b7cw5")
muzzles = [NodePath("../phase_1/Muzzle")]
bullet = ExtResource("4_1awqw")
fire_rate = 0.05
shoot_cooldown = NodePath("shoot_cooldown")
max_ammo = 100
hp_to_activate = 250

[node name="shoot_cooldown" type="Timer" parent="behavior_master/phase_2"]
wait_time = 0.05

[node name="phase_3" type="Node3D" parent="behavior_master" node_paths=PackedStringArray("muzzles", "shoot_cooldown")]
script = ExtResource("5_b7cw5")
muzzles = [NodePath("../phase_1/Muzzle")]
bullet = ExtResource("4_1awqw")
fire_rate = 0.05
shoot_cooldown = NodePath("shoot_cooldown")
max_ammo = 100
hp_to_activate = 50

[node name="shoot_cooldown" type="Timer" parent="behavior_master/phase_3"]
wait_time = 0.05

[node name="FiniteStateMachine" type="Node" parent="behavior_master"]
script = ExtResource("4_iyfoj")

[node name="Dead" type="Node" parent="behavior_master/FiniteStateMachine"]
script = ExtResource("5_h10c2")

[node name="Idle" type="Node" parent="behavior_master/FiniteStateMachine" node_paths=PackedStringArray("behavior")]
script = ExtResource("6_cf5re")
behavior = NodePath("../..")

[node name="Chase" type="Node" parent="behavior_master/FiniteStateMachine" node_paths=PackedStringArray("behavior")]
script = ExtResource("7_owoi1")
behavior = NodePath("../..")

[node name="Avoid" type="Node" parent="behavior_master/FiniteStateMachine" node_paths=PackedStringArray("behavior")]
script = ExtResource("8_i46cv")
behavior = NodePath("../..")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="behavior_master"]
navigation_layers = 255

[node name="attack_timer" type="Timer" parent="behavior_master"]

[node name="aimnode" type="Node3D" parent="behavior_master"]
top_level = true

[node name="gore_manager" parent="." instance=ExtResource("9_atak7")]

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -373.0
offset_top = 21.0
offset_right = 373.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_un28l")
value = 50.0
show_percentage = false

[connection signal="timeout" from="behavior_master/phase_1/shoot_cooldown" to="behavior_master" method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="behavior_master/phase_1/shoot_cooldown" to="behavior_master/phase_1" method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="behavior_master/phase_2/shoot_cooldown" to="behavior_master/phase_2" method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="behavior_master/phase_3/shoot_cooldown" to="behavior_master/phase_3" method="_on_shoot_cooldown_timeout"]
[connection signal="velocity_computed" from="behavior_master/NavigationAgent3D" to="behavior_master" method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="behavior_master/attack_timer" to="behavior_master" method="_on_attack_timer_timeout"]
